<resources>
    <string name="sender">Sender Details</string>
    <string name="reciever">Reciever Details</string>
    <string name="review">Review Information</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="contact">Contact Info</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="namee">Name</string>


</resources>